fixes (#103)
* Egorushka (#93)

* prepare for prod
* Try to divide prod and local settings

* Egorushka (#95)

* prepare for prod
* Try to divide prod and local settings

* Normalizer (#98)

* Add Captcha

* rename _local_settings

* add prod_settings.py

* Add Captcha try_2

* actual develop

* Add invisible Captcha. Add Captcha to comments

* change kye for reCAPTCHA

* Try to normalise situations

* Sergey's fix recuptcha

* Murr actions (#96)

* Fixed MurrDelete Button

* Clear ModalWindow data on unload

* Refresh MurrList window on close MurrDetail

* Fixed Double Ajax Post requests

* Code cleanup

* Add MurrActions

* Small fix

* One more fix. Time to sleep =/

* Morning Refactoring

* Use ActionProcessor

* Resolve MR review conversations

* Use Slug + fix naming

* [+] Profile small improvements (#92)

* [+] Profile small improvements
* [+] Profile small improvements and mobile adaptive

* Поправлена работы капчи(рекапчи) в локальном окружении (#100)

* Refactor for local captcha

* Fix for add cover (#102)

* Fix max len of username. Fix word-break in murr_detail

--- a/static/css/murr-detail_drawer.css
+++ b/static/css/murr-detail_drawer.css
@@ -7,7 +7,7 @@
     margin: 0 0 20px 0;
 }
 
-.murr-detail__body img{
+.murr-detail__body img {
     max-width: 50%;
     height: auto !important;
     display: block;
@@ -15,8 +15,13 @@
     margin-right: auto;
 }
 
-.murr-detail__title{
+.murr-detail__title {
     text-align: center;
+    word-break: break-all;
+}
+
+.murr-detail__content {
+    word-break: break-all;
 }
 
 .murr-detail__footer {
